# dementAI

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
backend/: config.py  llm.py  main.py
backend/agents/: analyzer.py  care.py  coordinator.py  diagnosis.py  prevention.py  screening.py  treatment.py
backend/api/: models.py
backend/api/routes/: patient.py  query.py
backend/prompts/: __init__.py  care.txt  coordinator_classify.txt  diagnosis.txt  prevention.txt  screening.txt  treatment.txt
backend/rag/: dementia_taxonomy.toml  embedder.py  ingestion.py  pubmed_queries.toml  retriever.py
backend/rag/sources/: aan.py  alz.py  awmf.py  pubmed.py
backend/state/: schema.py
backend/tools/: calculators.py  retrieval.py
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: PatientProfile.tsx  QueryPanel.tsx  StageBadge.tsx
frontend/src/types/: index.ts
scripts/: ingest.py  pre-commit
tests/: test_coordinator.py  test_e2e.py
tests/rag/sources/: test_aan.py  test_alz.py
