[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dementia"
version = "0.1.0"
description = "DementIA — AI-powered dementia clinical decision support"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-anthropic>=0.3",
    "lancedb>=0.10",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyarrow>=17.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
# Install with: pip install -e ".[rag]"
rag = [
    "sentence-transformers>=2.7",
    "torch>=2.2",
    "numpy>=1.26",
]
# Install with: pip install -e ".[ingest]"
ingest = [
    "pypdf>=3.0",
    "beautifulsoup4>=4.12",
]
# Future: pip install -e ".[imaging]"
# Will be needed when the Reader Agent is extended to handle raw medical file formats
# (DICOM, NIfTI, FreeSurfer stats). Not required while inputs are structured data.
# imaging = ["pydicom>=2.4", "nibabel>=5.0", "numpy>=1.24"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
